w32: Change the condition for struct timespec.

* w32/npth.h: Fix the ifdef case.

--

GnuPG-bug-id: 2202
Signed-off-by: NIIBE Yutaka <gniibe@fsij.org>